@@ -40,6 +40,7 @@
 :- import_module time.
 :- import_module pprint.
 :- import_module bitmap.
+:- import_module hash_table.
 
 :- import_module builtin, private_builtin, table_builtin.
 
