@@ -34,6 +34,8 @@ Changes to the standard library:
 * We've extended the array module with array__sort/1, array__foldl/3 and
   array__foldr/3.
 
+* We've added a new `hash_table' library module.
+
 NEWS for Mercury release 0.10:
 ------------------------------
 
